css styles and basic colour scheme

--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,13 @@
         <meta charset="UTF-8" />   
         <meta name="viewport" content="width=device-width,initial-scale=1" />   
         <meta name="description" content="" />   
+
+        <link rel="stylesheet" href="folioStyles.css">
     </head> 
-    <body>   
+    <body>
+        <Div class="content">
+            <h1 class="heading">Gaile Williams Portfolio Website</h1>
+            <p>some sample paragraph text</p>
+        </Div>
     </body> 
 </html> 
