--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>   
+        <meta charset="UTF-8" />   
+        <meta name="viewport" content="width=device-width,initial-scale=1" />   
+        <meta name="description" content="" />   
+
+        <link rel="stylesheet" href="folioStyles.css">
+    </head> 
+    <body>   
+    </body> 
+</html> 
