--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,9 +4,33 @@
         <meta charset="UTF-8" />   
         <meta name="viewport" content="width=device-width,initial-scale=1" />   
         <meta name="description" content="" />   
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="folioStyles.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
-    <body>   
+    <body>  
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Gaile W Portfolio</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="nav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                <a class="nav-link " href="Home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="About.html">About</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="Portfolio.html">Folio</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+        </nav> 
     </body> 
 </html> 
