Added basis for displaying projects

--- a/Home.html
+++ b/Home.html
@@ -32,9 +32,12 @@
             </div>
         </div>
         </nav>
-        <Div class="content">
-            <h1 class="heading">Gaile Williams Portfolio Website</h1>
-            <p>some sample paragraph text</p>
-        </Div>
+        <div class="container-fluid px-3 py-2">
+            <div class="content">
+                <h1 class="heading">Portfolio Website</h1>
+                <p>This is a project for the Introduction to Web-development module in year one of computer science at Dundee University.</p>
+            </div>
+        </div>
+        
     </body> 
 </html> 
