--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,5 +32,24 @@
             </div>
         </div>
         </nav> 
+
+        <div class="container mt-5">
+            <div class="row g-4">
+
+                <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="image1.jpg" class="card-img-top" alt="Project 1">
+                    <div class="card-body">
+                    <h5 class="card-title">Project Title</h5>
+                    <p class="card-text">Short description of the project.</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+                </div>
+
+                <!-- Repeat this col block for more projects -->
+
+            </div>
+        </div>
     </body> 
 </html> 
