Added images to folio entrys and updated text

--- a/About.html
+++ b/About.html
@@ -32,5 +32,18 @@
             </div>
         </div>
         </nav>  
+        <div class="container-fluid px-3 py-2">
+            <div class="content">
+                <h1 class="heading">About Me</h1>
+                <p>I'm currently a first student at the Universtiy of Dundee studying computer science. Outside of that i  am employed as a cook at an Italian and breakfast restaurant.</p>
+            </div>
+        </div>
+
+        <div class="container-fluid px-3 py-2">
+            <div class="content">
+                <h1 class="heading">Sample Title</h1>
+                <p>Sample text to test how two text boxes interact as the page layout is changed.</p>
+            </div>
+        </div>
     </body> 
 </html> 
