--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,21 +33,59 @@
         </div>
         </nav> 
 
+        <div class="container-fluid px-3 py-2">
+            <div class="content">
+                <h1 class="heading">Projects</h1>
+                <p>Below you will find a list of completed or ongoing projects I've created or participated in.</p>
+            </div>
+        </div>
+
         <div class="container mt-5">
             <div class="row g-4">
 
                 <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="image1.jpg" class="card-img-top" alt="Project 1">
+                    <img src="Assets/MirrorformerSC.png" class="card-img-top" alt="Project 1">
                     <div class="card-body">
-                    <h5 class="card-title">Project Title</h5>
-                    <p class="card-text">Short description of the project.</p>
-                    <a href="#" class="btn btn-primary">View Project</a>
+                    <h5 class="card-title">MirrorFormer</h5>
+                    <p class="card-text">This was the first game I made and published as a submission to a game jam.</p>
+                    <a href="https://17-byte-games.itch.io/mirrorformer" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
                 </div>
 
-                <!-- Repeat this col block for more projects -->
+                <div class="col-md-4">
+                <div class="card h-100 portfolio-card">
+                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                    <div class="card-body">
+                    <h5 class="card-title">Sample Project</h5>
+                    <p class="card-text">Short project description</p>
+                    <a href="#" class="btn portfolio-btn">View Project</a>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-4">
+                <div class="card h-100 portfolio-card">
+                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                    <div class="card-body">
+                    <h5 class="card-title">Sample Project</h5>
+                    <p class="card-text">Short project description</p>
+                    <a href="#" class="btn portfolio-btn">View Project</a>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-4">
+                <div class="card h-100 portfolio-card">
+                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                    <div class="card-body">
+                    <h5 class="card-title">Sample Project</h5>
+                    <p class="card-text">Short project description</p>
+                    <a href="#" class="btn portfolio-btn">View Project</a>
+                    </div>
+                </div>
+                </div>
 
             </div>
         </div>
