--- a/Home.html
+++ b/Home.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8" />   
         <meta name="viewport" content="width=device-width,initial-scale=1" />   
         <meta name="description" content="" />   
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="folioStyles.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
     <body>
+        <!--navbar elements utilising bootstrap-->
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Gaile W Portfolio</a>
@@ -32,6 +35,9 @@
             </div>
         </div>
         </nav>
+
+        <!--standard text block and title used on the page-->
+        
         <div class="container-fluid px-3 py-2">
             <div class="content">
                 <h1 class="heading">Portfolio Website</h1>
