--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8" />   
         <meta name="viewport" content="width=device-width,initial-scale=1" />   
         <meta name="description" content="" />   
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="folioStyles.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
     <body>  
+        <!--navbar elements utilising bootstrap-->
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Gaile W Portfolio</a>
@@ -40,8 +43,12 @@
             </div>
         </div>
 
+         <!--Portfolio entries-->
+
         <div class="container mt-5">
             <div class="row g-4">
+
+                <!--each block on this column can be copied to add more entries to the page which scales and alligns automatically-->
 
                 <div class="col-md-4">
                 <div class="card h-100">
@@ -53,6 +60,8 @@
                     </div>
                 </div>
                 </div>
+
+                <!--end of repeatable code block-->
 
                 <div class="col-md-4">
                 <div class="card h-100 portfolio-card">
