added page structure

--- a/About.html
+++ b/About.html
@@ -11,33 +11,33 @@
     </head> 
     <body> 
         <!--navbar elements utilising bootstrap-->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Gaile W Portfolio</a>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Gaile W Portfolio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+                <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="nav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="Home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="About.html">About</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html">Folio</a>
-                </li>
-            </ul>
+                <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="Home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="Portfolio.html">Folio</a>
+                    </li>
+                </ul>
+                </div>
             </div>
-        </div>
-        </nav>  
-
-        
-        <div class="container-fluid px-3 py-2">
+            </nav>    
+        </header>
+        <main>
+            <div class="container-fluid px-3 py-2">
             <div class="content">
                 <h1 class="heading">About Me</h1>
                 <p>I'm currently a first student at the Universtiy of Dundee studying computer science. Outside of that i  am employed as a cook at an Italian and breakfast restaurant.</p>
@@ -46,9 +46,15 @@
 
         <div class="container-fluid px-3 py-2">
             <div class="content">
-                <h1 class="heading">Sample Title</h1>
+                <h2 class="heading">Secondary Sample Title</h2>
                 <p>Sample text to test how two text boxes interact as the page layout is changed.</p>
             </div>
         </div>
+        </main>
+        <footer>
+            <p>Page last updated on Monday 16/02/2026</p>
+        </footer>
+
+        
     </body> 
 </html> 
