--- a/Home.html
+++ b/Home.html
@@ -10,40 +10,45 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
     <body>
-        <!--navbar elements utilising bootstrap-->
+        <header>
+            <!--navbar elements utilising bootstrap-->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Gaile W Portfolio</a>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Gaile W Portfolio</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+                <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="nav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                <a class="nav-link active" href="Home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="About.html">About</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html">Folio</a>
-                </li>
-            </ul>
+                <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                    <a class="nav-link active" href="Home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="Portfolio.html">Folio</a>
+                    </li>
+                </ul>
+                </div>
             </div>
-        </div>
-        </nav>
+            </nav>
+        </header>
+        <main>
+            <!--standard text block and title used on the page-->
 
-        <!--standard text block and title used on the page-->
-        
-        <div class="container-fluid px-3 py-2">
-            <div class="content">
-                <h1 class="heading">Portfolio Website</h1>
-                <p>This is a project for the Introduction to Web-development module in year one of computer science at Dundee University.</p>
+            <div class="container-fluid px-3 py-2">
+                <div class="content">
+                    <h1 class="heading">Portfolio Website</h1>
+                    <p>This is a project for the Introduction to Web-development module in year one of computer science at Dundee University.</p>
+                </div>
             </div>
-        </div>
-        
+        </main>
+        <footer>
+            <p>Page last updated on Monday 16/02/2026</p>
+        </footer>
     </body> 
 </html> 
