--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,94 +9,100 @@
         <link rel="stylesheet" href="folioStyles.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
-    <body>  
-        <!--navbar elements utilising bootstrap-->
+    <body>
+        <header>
+            <!--navbar elements utilising bootstrap-->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Gaile W Portfolio</a>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Gaile W Portfolio</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+                <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="nav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                <a class="nav-link " href="Home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="About.html">About</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="Portfolio.html">Folio</a>
-                </li>
-            </ul>
+                <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                    <a class="nav-link " href="Home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="Portfolio.html">Folio</a>
+                    </li>
+                </ul>
+                </div>
             </div>
-        </div>
-        </nav> 
-
-        <div class="container-fluid px-3 py-2">
-            <div class="content">
-                <h1 class="heading">Projects</h1>
-                <p>Below you will find a list of completed or ongoing projects I've created or participated in.</p>
+            </nav> 
+        </header>
+        <main>
+            <div class="container-fluid px-3 py-2">
+                <div class="content">
+                    <h1 class="heading">Projects</h1>
+                    <p>Below you will find a list of completed or ongoing projects I've created or participated in.</p>
+                </div>
             </div>
-        </div>
 
-         <!--Portfolio entries-->
+            <!--Portfolio entries-->
 
-        <div class="container mt-5">
-            <div class="row g-4">
+            <div class="container mt-5">
+                <div class="row g-4">
 
-                <!--each block on this column can be copied to add more entries to the page which scales and alligns automatically-->
+                    <!--each block on this column can be copied to add more entries to the page which scales and alligns automatically-->
 
-                <div class="col-md-4">
-                <div class="card h-100">
-                    <img src="Assets/MirrorformerSC.png" class="card-img-top" alt="Project 1">
-                    <div class="card-body">
-                    <h5 class="card-title">MirrorFormer</h5>
-                    <p class="card-text">This was the first game I made and published as a submission to a game jam.</p>
-                    <a href="https://17-byte-games.itch.io/mirrorformer" class="btn btn-primary">View Project</a>
+                    <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="Assets/MirrorformerSC.png" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                        <h5 class="card-title">MirrorFormer</h5>
+                        <p class="card-text">This was the first game I made and published as a submission to a game jam.</p>
+                        <a href="https://17-byte-games.itch.io/mirrorformer" class="btn btn-primary">View Project</a>
+                        </div>
                     </div>
-                </div>
-                </div>
-
-                <!--end of repeatable code block-->
-
-                <div class="col-md-4">
-                <div class="card h-100 portfolio-card">
-                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
-                    <div class="card-body">
-                    <h5 class="card-title">Sample Project</h5>
-                    <p class="card-text">Short project description</p>
-                    <a href="#" class="btn portfolio-btn">View Project</a>
                     </div>
-                </div>
-                </div>
 
-                <div class="col-md-4">
-                <div class="card h-100 portfolio-card">
-                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
-                    <div class="card-body">
-                    <h5 class="card-title">Sample Project</h5>
-                    <p class="card-text">Short project description</p>
-                    <a href="#" class="btn portfolio-btn">View Project</a>
+                    <!--end of repeatable code block-->
+
+                    <div class="col-md-4">
+                    <div class="card h-100 portfolio-card">
+                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <div class="card-body">
+                        <h5 class="card-title">Sample Project</h5>
+                        <p class="card-text">Short project description</p>
+                        <a href="#" class="btn portfolio-btn">View Project</a>
+                        </div>
                     </div>
-                </div>
-                </div>
-
-                <div class="col-md-4">
-                <div class="card h-100 portfolio-card">
-                    <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
-                    <div class="card-body">
-                    <h5 class="card-title">Sample Project</h5>
-                    <p class="card-text">Short project description</p>
-                    <a href="#" class="btn portfolio-btn">View Project</a>
                     </div>
-                </div>
-                </div>
 
+                    <div class="col-md-4">
+                    <div class="card h-100 portfolio-card">
+                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <div class="card-body">
+                        <h5 class="card-title">Sample Project</h5>
+                        <p class="card-text">Short project description</p>
+                        <a href="#" class="btn portfolio-btn">View Project</a>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="col-md-4">
+                    <div class="card h-100 portfolio-card">
+                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <div class="card-body">
+                        <h5 class="card-title">Sample Project</h5>
+                        <p class="card-text">Short project description</p>
+                        <a href="#" class="btn portfolio-btn">View Project</a>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
             </div>
-        </div>
+        </main>
+        <footer>
+            <p>Page last updated on Monday 16/02/2026</p>
+        </footer>
     </body> 
 </html> 
