--- a/Pages/About.html
+++ b/Pages/About.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
     <head>   
         <meta charset="UTF-8" />   
@@ -6,13 +6,12 @@
         <meta name="description" content="" />   
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="folioStyles.css">
+        <link rel="stylesheet" href="../Styles/folioStyles.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
-    <body>
+    <body> 
+        <!--navbar elements utilising bootstrap-->
         <header>
-            <!--navbar elements utilising bootstrap-->
-
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Gaile W Portfolio</a>
@@ -24,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                    <a class="nav-link active" href="Home.html">Home</a>
+                    <a class="nav-link" href="Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
+                    <a class="nav-link active" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="Portfolio.html">Folio</a>
@@ -35,20 +34,19 @@
                 </ul>
                 </div>
             </div>
-            </nav>
+            </nav>    
         </header>
         <main>
-            <!--standard text block and title used on the page-->
-
             <div class="container-fluid px-3 py-2">
-                <div class="content">
-                    <h1 class="heading">Portfolio Website</h1>
-                    <p>This is a project for the Introduction to Web-development module in year one of computer science at Dundee University.</p>
-                </div>
+            <div class="content">
+                <h1 class="heading">About Me</h1>
+                <p>I'm currently a first student at the Universtiy of Dundee studying computer science. Outside of that I am employed as a cook at an Italian and breakfast restaurant.</p>
             </div>
         </main>
         <footer>
             <p>Page last updated on Monday 16/02/2026</p>
         </footer>
+
+        
     </body> 
 </html> 
