--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />   
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="folioStyles.css">
+        <link rel="stylesheet" href="../Styles/folioStyles.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head> 
     <body>
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                    <a class="nav-link " href="Home.html">Home</a>
+                    <a class="nav-link " href="Index.html">Home</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="About.html">About</a>
@@ -54,7 +54,7 @@
 
                     <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="Assets/MirrorformerSC.png" class="card-img-top" alt="Project 1">
+                        <img src="../Assets/MirrorformerSC.png" class="card-img-top" alt="Project 1">
                         <div class="card-body">
                         <h5 class="card-title">MirrorFormer</h5>
                         <p class="card-text">This was the first game I made and published as a submission to a game jam.</p>
@@ -67,7 +67,7 @@
 
                     <div class="col-md-4">
                     <div class="card h-100 portfolio-card">
-                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <img src="../Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
                         <div class="card-body">
                         <h5 class="card-title">Sample Project</h5>
                         <p class="card-text">Short project description</p>
@@ -78,7 +78,7 @@
 
                     <div class="col-md-4">
                     <div class="card h-100 portfolio-card">
-                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <img src="../Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
                         <div class="card-body">
                         <h5 class="card-title">Sample Project</h5>
                         <p class="card-text">Short project description</p>
@@ -89,7 +89,7 @@
 
                     <div class="col-md-4">
                     <div class="card h-100 portfolio-card">
-                        <img src="Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
+                        <img src="../Assets/Placeholder-523345509.png" class="card-img-top" alt="Project">
                         <div class="card-body">
                         <h5 class="card-title">Sample Project</h5>
                         <p class="card-text">Short project description</p>
